some css, small bug squishing etc etc

--- a/FinalProject/wwwroot/css/site.css
+++ b/FinalProject/wwwroot/css/site.css
@@ -69,3 +69,18 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.tableFixHead {
+    overflow-y: auto;
+    height: 100px;
+}
+
+.tableFixHead thead th {
+        position: sticky;
+        top: 0;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
